# R.A.B.I.D.S

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  security.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: CODE_SMELL.yml
.github/workflows/: aarch64.yml  ci.yaml  cmake.yml  codeql.yml  msvc.yml  release.yaml  scorecards.yml  sonar.yml  sonarcloud.yml  x64.yml
ConfigurationExamples/: config.cfg
include/: config.h  downtimeEntry.h  downtimeTracker.h  rabids.h  stdiohandler.h
include/config/: messages.h
src/: CMAKELISTS.txt  CMakeLists.txt  config.cpp  downtimeTracker.cpp  main.cpp  rabids.cpp
src/config/: messages.cpp
